# wearmouse

./: PRIVACY.md  README.md  build.gradle  gradle.properties
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  orientation_tracker.cc  orientation_tracker.h  sensor_fusion_jni.cc
app/src/main/cpp/sensors/: device_accelerometer_sensor.h  device_gyroscope_sensor.h  sensor_event_producer.h  sensor_thread_callbacks.h
app/src/main/cpp/sensors/android/: device_accelerometer_sensor.cc  device_gyroscope_sensor.cc  sensor_event_producer.cc
app/src/main/cpp/util/: logging.h
app/src/main/res/animator/: card_flip_right_in.xml  card_flip_right_out.xml
app/src/main/res/color/: icon_color.xml
app/src/main/res/drawable/: am_drag_handle.xml  button_left.xml  button_right.xml  ic_am_click_left.xml  ic_am_click_right.xml  ic_am_hand_center.xml  ic_am_hand_left.xml  ic_am_hand_right.xml  ic_background.xml  ic_bt_bluetooth.xml  ic_bt_ellipsis.xml  ic_bt_headset.xml  ic_bt_phone.xml  ic_bt_search.xml  ic_bt_watch.xml  ic_info.xml  ic_launcher.xml  ic_ms_keyboard.xml  ic_ms_keypad.xml  ic_ms_mouse.xml  ic_ms_touchpad.xml  ic_ob_calibration.xml  ic_ob_keypad.xml  ic_ob_wrist_gesture.xml  kp_background_circle.xml  kp_cross_4_way.xml  kp_cross_8_way.xml  kp_pointer.xml  ob_background_oval.xml  splash_screen.xml
app/src/main/res/layout/: activity_bt_state.xml  activity_calibration.xml  activity_card_flip.xml  activity_onboarding.xml  dialog_open_source.xml  fragment_about.xml  fragment_keypad.xml  fragment_mouse.xml  (+2 more)
(+87 files in other folders)
